# HardnessMDL

./: .gitignore  README.md  pyproject.toml  requirements_39.in  requirements_39.txt  setup_research.sh
examples/: iris_demo.sh  run_batch.py  run_online.py
research/: InstanceHardnessMeasuresPyHard.ipynb  hardnessmdl_utils.py
research/datasets/: generator.ipynb
research/datasets/synthetic_data/: ComputeDescriptionLenghts.ipynb  HardnessMDLMeasures.ipynb  InstanceHardnessMeasuresPyHard.ipynb  InstanceHardnessPyHardScript.py  generator.ipynb  output_1.csv  output_1_sem_escala.csv  output_4.csv  test2.csv  test4.csv
research/datasets/synthetic_data/five_classes/: test1.csv  test1_PyHard.csv  test2.csv  test2_PyHard.csv  test3.csv  test3_PyHard.csv  test4.csv  test4_PyHard.csv
research/datasets/synthetic_data/three_classes/: test1.csv  test1_PyHard.csv  test2.csv  test2_PyHard.csv  test3.csv  test3_PyHard.csv  test4.csv  test4_PyHard.csv
research/datasets/synthetic_data/two_classes/: test1.csv  test1_PyHard.csv  test2_PyHard.csv  test3.csv  test3_PyHard.csv  test4_PyHard.csv
research/datasets/uci_ml_repo/: dataset.yaml  datasets.ipynb  datasets.py  datasets_pyhard.py  monitoring.py  utils_HardnessMDL.py  utils_PyHard.py
research/datasets/uci_ml_repo/datasets/: contrac.csv  hill-valley.csv  letter.csv  libras.csv  skin.csv  wdbc.csv  wine.csv
research/datasets/uci_ml_repo/names/: fertility.names  wdbc.names
research/datasets/uci_ml_repo/results/: adult_description_lengths.csv  adult_hardness_mdl.csv  contrac_algo.csv  (+36 more)
src/hardnessmdl/: __init__.py  core.py
(+26 files in other folders)
